[gd_scene load_steps=18 format=2]

[ext_resource path="res://textures/1floor/eating_room.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/main_character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/1floor/family_dining.gd" type="Script" id=3]
[ext_resource path="res://textures/furniture/bookshelf.png" type="Texture" id=4]
[ext_resource path="res://textures/furniture/keg.png" type="Texture" id=5]
[ext_resource path="res://textures/furniture/oven_off.png" type="Texture" id=6]
[ext_resource path="res://textures/furniture/guest_table.png" type="Texture" id=7]
[ext_resource path="res://addons/JitterFreePixelArt.shader" type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.22398, 5.9746 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 47, 15 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11.2296, 5.91346 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.84981, 5.28087 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.71942, 5.49111 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 21, 14.7301 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1.94539, 12.8554 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1.40511, 12.8174 )

[node name="family_dining" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1318.46
margin_top = -734.99
margin_right = 1710.54
margin_bottom = 1085.01
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 145.713, 60.8013 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/StaticBody2D"]
polygon = PoolVector2Array( -100.027, -25.0622, 100.01, -25.0348, 100.037, 14.9616, 106.026, 15.0165, 105.943, 40.8658, 100.065, 41.0032, 99.9822, 63.9407, -100.027, 63.9956, -100.027, 41.0581, -105.988, 41.0581, -105.961, 15.0164, -100.055, 14.989, -99.9449, -28.7434, -138.24, 54.7514, -16.0005, 147.793, 251.203, 26.2708, 21.3347, -150.156 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -27, 0 )

[node name="bookshelf" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( 218, 28 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="StaticBody2D/bookshelf"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/bookshelf/Area2D"]
position = Vector2( 0.420486, 26.278 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 218, 30 )
shape = SubResource( 3 )

[node name="oven_off" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( 187, 33 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="StaticBody2D/oven_off"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/oven_off/Area2D"]
position = Vector2( -1.22528, 21.4057 )
shape = SubResource( 4 )

[node name="keg2" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( 263, 38 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="StaticBody2D/keg2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/keg2/Area2D"]
position = Vector2( 0.630661, 15.5566 )
shape = SubResource( 5 )

[node name="keg" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( 244, 38 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="StaticBody2D/keg"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/keg/Area2D"]
position = Vector2( -0.525574, 16.1347 )
shape = SubResource( 6 )

[node name="guest_table" type="Sprite" parent="StaticBody2D"]
material = SubResource( 1 )
position = Vector2( 171, 87 )
texture = ExtResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 170.685, 88.838 )
shape = SubResource( 7 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 226.359, 47.5652 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 123.0
margin_top = 66.0
margin_right = 164.0
margin_bottom = 76.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2nd_floor" type="Area2D" parent="."]
position = Vector2( 44.7541, 88.5465 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="2nd_floor"]
position = Vector2( -1.876, 0.317345 )
shape = SubResource( 8 )

[node name="secret_hall" type="Area2D" parent="."]
position = Vector2( 236.873, 88.5901 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="secret_hall"]
position = Vector2( 10.2182, 0.101677 )
shape = SubResource( 9 )
[connection signal="body_entered" from="2nd_floor" to="." method="_on_2nd_floor_body_entered"]
[connection signal="body_entered" from="secret_hall" to="." method="_on_secret_hall_body_entered"]
